# Learnings

./: .gitignore  AI-tools.md  glow.css  markdown-theme-2.css  markdown-theme.css  temp.md
AI/RAG/rag-tutorial-1/: .gitignore  main.py  pyproject.toml
AI/RAG/rag-tutorial-1/Agentic-LanggraphCrash-course/: 1-BasicChatbot.ipynb  2-BasicChatbotWithTools.ipynb  3-AI-career-Assistant-Agent.ipynb  4-2-dev-team.ipynb  4-3-dev-team.ipynb  4-AI-software-development-team-Agents.ipynb
AI/RAG/rag-tutorial-1/Evaluation/0-tutorial/: 0-Why.ipynb  1-Thinking.ipynb  10-Production-RAG-Evaluation-at-Scale.ipynb  2-0-retrieval-evaluation.ipynb  2-5-toy_retriever.ipynb  3-chunk-and-context-evaluation.ipynb  4-generation-evaluation.ipynb  5-Building-Evaluation-Datasets.ipynb  6-Metrics.ipynb  7-LLM-as-a-Judge.ipynb  8-Evaluating-Complex-RAG-Systems.ipynb  9-RAG-Evaluation-Frameworks.ipynb  README.md
AI/RAG/rag-tutorial-1/Evaluation/1-practical/: README.md  README2.md
AI/RAG/rag-tutorial-1/Evaluation/1-practical/notebooks/: 00_orientation_and_dataset_setup.ipynb  01_manual_evaluation.ipynb  (+11 more)
AI/RAG/rag-tutorial-1/chunking/: 1_docs_parsing.ipynb  2_Structural_Chunking.ipynb  3_Semantic_Chunking.ipynb  4_Topic_Drift_Detection.ipynb  output.md
AI/RAG/rag-tutorial-1/course/basics/: README1.md  README2.md  README3.md  rag_notebook_prompts.md
AI/RAG/rag-tutorial-1/extractions/: PDF-Extraction-Fitz.ipynb
AI/RAG/rag-tutorial-1/notebook/: 1_document.ipynb  2_0_pdfs_rag.ipynb  2_1_pdfs_rag_lanchain.ipynb  3_1_agentic_rag.ipynb  4_1_chatbot_multiple_tools_react_rag.ipynb  4_2_chatbot.ipynb
AI/RAG/rag-tutorial-1/realworld-example/: procurement-1.ipynb  procurement-2.ipynb
(+1269 files in other folders)
