[project]
name = "rag-tutorial-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=1.4.8",
    "chonkie>=1.6.7",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "docling>=2.95.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "pdfminer>=20191125",
    "pdfminer-six>=20260107",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.0",
    "tqdm>=4.67.3",
    "typesense>=2.0.0",
    "unstructured>=0.22.31",
    "wikipedia>=1.4.0",
]
